--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,5 +24,5 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./docs
-        username: "GitHub Pages Automatic Deployment"
-        useremail: "hello@bnb.im"
+        user_name: "GitHub Pages Automatic Deployment"
+        user_email: "hello@bnb.im"
